# agent-traffic

./: .gitignore  README.md
at_ws/: .gitignore
at_ws/.catkin_tools/profiles/default/: devel_collisions.txt
at_ws/src/: .gitignore
at_ws/src/at_project/: at.launch  run.sh
at_ws/src/at_project/at_msgs/: CMakeLists.txt  package.xml
at_ws/src/at_project/at_msgs/msg/: ActionMsg.msg  PositionMsg.msg  UniquePositionMsg.msg
at_ws/src/at_project/at_msgs/srv/: NewAgentSrv.srv  NextMoveSrv.srv  NextPositionsSrv.srv  TurtlePosition.srv
at_ws/src/at_project/at_world/: CMakeLists.txt
at_ws/src/at_project/at_world/src/: config_file_dao.py  world.py
at_ws/src/at_project/config/: sdl_field.map
at_ws/src/at_project/control_logic/: CMakeLists.txt  package.xml
at_ws/src/at_project/control_logic/src/: agent.py  test.py
at_ws/src/at_project/sdl-turtle/: CMakeLists.txt  README.md  package.xml
at_ws/src/at_project/sdl-turtle/include/: Actor.hpp  Application.hpp  BaseActor.hpp  Config.hpp  Movement.hpp  Orientation.hpp  SDLDeleter.hpp  StaticObstacle.hpp
at_ws/src/at_project/sdl-turtle/src/: Actor.cpp  Application.cpp  CMakeLists.txt  Config.cpp  StaticObstacle.cpp  main.cpp
at_ws/src/at_project/turtlesim/: CMakeLists.txt  package.xml
at_ws/src/at_project/turtlesim/include/turtlesim/: turtle.h
at_ws/src/at_project/turtlesim/src/: turtle.cpp  turtle_frame.cpp
at_ws/src/at_project/turtlesim/tutorials/: teleop_turtle_key.cpp
