<package format="2">
  <name>control_logic</name>
  <version>0.1.0</version>
  <description>
      control logic
  </description>
  <maintainer email="maintainer@mail.com">The Maintainer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ca_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>roslib</depend>
  <depend>rostime</depend>
</package>
